[gd_scene load_steps=33 format=3 uid="uid://iyb0x4jsmjmq"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_1o0le"]
[ext_resource type="Script" path="res://Scripts/TextBox.gd" id="1_16yjp"]
[ext_resource type="Texture2D" uid="uid://qg6cuvfkf4aj" path="res://Assets/UI/sidepanleborder.png" id="2_8p7yv"]
[ext_resource type="Texture2D" uid="uid://ciqhktfwvkmo6" path="res://Assets/UI/sidepanel.png" id="2_x1jid"]
[ext_resource type="Texture2D" uid="uid://b4c3vlr0l4nbp" path="res://Assets/UI/watch.png" id="3_adbjm"]
[ext_resource type="Texture2D" uid="uid://0hsajh7cyoj" path="res://Assets/UI/backgradient.png" id="3_l6rei"]
[ext_resource type="Texture2D" uid="uid://bnthdd172ijpy" path="res://Assets/UI/items box.png" id="4_4yrhr"]
[ext_resource type="Texture2D" uid="uid://xtk52t6s7xfr" path="res://Assets/UI/textbox.png" id="4_nj16y"]
[ext_resource type="Texture2D" uid="uid://b5w32aaa437ji" path="res://Assets/UI/detailleft.png" id="5_l6mn0"]
[ext_resource type="Texture2D" uid="uid://d25bbhiv67s7p" path="res://Assets/UI/pfp temp.jpg" id="5_yo2sw"]
[ext_resource type="Texture2D" uid="uid://c8hve0be40eae" path="res://Assets/sculpting/UI_design.png" id="5_yp6hw"]
[ext_resource type="Texture2D" uid="uid://d02xbgkh3g677" path="res://Assets/UI/detailright.png" id="6_151yf"]
[ext_resource type="Texture2D" uid="uid://brol56sug3oa5" path="res://Assets/UI/portrait.png" id="6_mq00r"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryContainer.gd" id="10_70635"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryContainer2.gd" id="12_i6cg3"]
[ext_resource type="Texture2D" uid="uid://chwqnkua8gg47" path="res://Assets/UI/wheel Icons/iconexamine.png" id="13_hnpvo"]
[ext_resource type="Script" path="res://Scripts/Inventory/InventoryContainer3.gd" id="13_mxlh4"]
[ext_resource type="Script" path="res://Scripts/Actions/Traverse.gd" id="13_paq7k"]
[ext_resource type="Script" path="res://Scripts/Actions/Talk.gd" id="14_8xvhn"]
[ext_resource type="Texture2D" uid="uid://bfx8mu42ipuwl" path="res://Assets/UI/wheel Icons/icontake.png" id="14_158d8"]
[ext_resource type="Texture2D" uid="uid://h31yco05wcpi" path="res://Assets/UI/wheel Icons/iconuse.png" id="15_6pbib"]
[ext_resource type="Script" path="res://Scripts/Actions/Use.gd" id="15_717pr"]
[ext_resource type="Texture2D" uid="uid://75fjxjokldpm" path="res://Assets/UI/wheel Icons/icontalk.png" id="16_mox0v"]
[ext_resource type="Script" path="res://Scripts/Actions/Take.gd" id="16_utkvd"]
[ext_resource type="Script" path="res://Scripts/Actions/Examine.gd" id="17_a4vhy"]
[ext_resource type="Texture2D" uid="uid://b5t6uyrlm6vre" path="res://Assets/UI/wheel Icons/Icontraverse.png" id="17_a8g1c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyoj1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.686275, 0.529412, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6xsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0pul"]
size = Vector2(65.388, 84.2678)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4xks8"]
size = Vector2(65.3879, 86.4616)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wypqp"]
size = Vector2(66.2962, 85.2254)

[sub_resource type="SpriteFrames" id="SpriteFrames_3veiq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_hnpvo")
}, {
"duration": 1.0,
"texture": ExtResource("14_158d8")
}, {
"duration": 1.0,
"texture": ExtResource("15_6pbib")
}, {
"duration": 1.0,
"texture": ExtResource("16_mox0v")
}, {
"duration": 1.0,
"texture": ExtResource("17_a8g1c")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[node name="Early_UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_1o0le")

[node name="TextBox" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource("1_16yjp")

[node name="ReferenceBackground" type="TextureRect" parent="TextBox"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("5_yp6hw")
expand_mode = 1

[node name="BackGradient" type="TextureRect" parent="TextBox"]
offset_left = 2.0
offset_top = 461.0
offset_right = 1153.0
offset_bottom = 648.0
texture = ExtResource("3_l6rei")
expand_mode = 1

[node name="TextBoxBackground" type="TextureRect" parent="TextBox"]
z_as_relative = false
offset_left = 75.0
offset_top = 484.0
offset_right = 797.0
offset_bottom = 635.0
texture = ExtResource("4_nj16y")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TextBox/TextBoxBackground"]
layout_mode = 0
offset_left = 58.0
offset_right = 661.0
offset_bottom = 149.0
text = "Hello"

[node name="DetailLeft" type="TextureRect" parent="TextBox"]
offset_left = 1.0
offset_top = 463.0
offset_right = 139.0
offset_bottom = 646.0
texture = ExtResource("5_l6mn0")
expand_mode = 1

[node name="DetailRight" type="TextureRect" parent="TextBox"]
offset_left = 738.0
offset_top = 459.0
offset_right = 969.0
offset_bottom = 649.0
texture = ExtResource("6_151yf")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="TextBox"]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 71.0
offset_top = -219.0
offset_right = -310.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="TextBox/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jyoj1")

[node name="MarginContainer2" type="MarginContainer" parent="TextBox/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="TextBox/MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v6xsf")

[node name="Label" type="Label" parent="TextBox/MarginContainer/MarginContainer2"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
text = "this  area contains the dialogue from npcs, events, or other things
each peice of dialoge will need it's own box, they cannot be combined in the current setup.




The grey part is the writable inventory. it can hold a maximum of seven lines"
autowrap_mode = 2
max_lines_visible = 7

[node name="Inventory" type="CanvasLayer" parent="."]

[node name="border container" type="MarginContainer" parent="Inventory"]
offset_left = 918.0
offset_top = -1.0
offset_right = 923.0
offset_bottom = 317.0
scale = Vector2(1.40334, 1.45797)

[node name="TextureRect" type="TextureRect" parent="Inventory/border container"]
clip_contents = true
layout_mode = 2
texture = ExtResource("2_8p7yv")
expand_mode = 1
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Inventory"]
visibility_layer = 2
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -226.0
grow_horizontal = 0
grow_vertical = 2

[node name="SidePanel" type="TextureRect" parent="Inventory/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_x1jid")
expand_mode = 1

[node name="Panel" type="Panel" parent="Inventory/MarginContainer"]
layout_mode = 2

[node name="InventoryContainer" type="Area2D" parent="Inventory"]
light_mask = 1023
visibility_layer = 1023
scale = Vector2(1.10112, 1.04429)
collision_layer = 255
collision_mask = 255
script = ExtResource("10_70635")

[node name="Box" type="TextureRect" parent="Inventory/InventoryContainer"]
offset_left = 832.789
offset_top = 233.652
offset_right = 914.789
offset_bottom = 326.652
texture = ExtResource("4_4yrhr")
expand_mode = 1

[node name="Slot1" type="TextureRect" parent="Inventory/InventoryContainer"]
offset_left = 832.789
offset_top = 233.652
offset_right = 914.789
offset_bottom = 326.652
expand_mode = 1
stretch_mode = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inventory/InventoryContainer"]
position = Vector2(874.34, 284.652)
shape = SubResource("RectangleShape2D_y0pul")

[node name="InventoryContainer2" type="Area2D" parent="Inventory"]
scale = Vector2(1.10112, 1.05249)
script = ExtResource("12_i6cg3")

[node name="Box" type="TextureRect" parent="Inventory/InventoryContainer2"]
offset_left = 900.901
offset_top = 231.831
offset_right = 982.901
offset_bottom = 324.831
texture = ExtResource("4_4yrhr")
expand_mode = 1

[node name="Slot2" type="TextureRect" parent="Inventory/InventoryContainer2"]
offset_left = 900.901
offset_top = 231.831
offset_right = 982.901
offset_bottom = 324.831
expand_mode = 1
stretch_mode = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inventory/InventoryContainer2"]
position = Vector2(942.452, 284.256)
shape = SubResource("RectangleShape2D_4xks8")

[node name="InventoryContainer3" type="Area2D" parent="Inventory"]
scale = Vector2(1.10112, 1.04429)
script = ExtResource("13_mxlh4")

[node name="Box" type="TextureRect" parent="Inventory/InventoryContainer3"]
offset_left = 969.013
offset_top = 234.609
offset_right = 1051.01
offset_bottom = 327.609
texture = ExtResource("4_4yrhr")
expand_mode = 1

[node name="Slot3" type="TextureRect" parent="Inventory/InventoryContainer3"]
offset_left = 969.013
offset_top = 234.609
offset_right = 1051.01
offset_bottom = 327.609
expand_mode = 1
stretch_mode = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inventory/InventoryContainer3"]
position = Vector2(1011.02, 286.088)
shape = SubResource("RectangleShape2D_wypqp")

[node name="portrait container" type="MarginContainer" parent="Inventory"]
offset_left = 919.0
offset_top = -30.0
offset_right = 1151.0
offset_bottom = 256.0
scale = Vector2(1.02, 0.998891)

[node name="Sprite2D" type="Sprite2D" parent="Inventory/portrait container"]
position = Vector2(120.588, 137.152)
scale = Vector2(0.42647, 0.420466)
texture = ExtResource("5_yo2sw")

[node name="TextureRect" type="TextureRect" parent="Inventory/portrait container"]
layout_mode = 2
texture = ExtResource("6_mq00r")
expand_mode = 1

[node name="Action Wheel" type="CanvasLayer" parent="."]
layer = 2

[node name="WheelIcon" type="AnimatedSprite2D" parent="Action Wheel"]
position = Vector2(1012, 505)
scale = Vector2(0.11, 0.114)
sprite_frames = SubResource("SpriteFrames_3veiq")
frame = 4
frame_progress = 1.0

[node name="Watch Container" type="MarginContainer" parent="Action Wheel"]
offset_left = 882.0
offset_top = 393.0
offset_right = 1170.0
offset_bottom = 641.0
scale = Vector2(0.971543, 0.95057)

[node name="Sprite2D" type="Sprite2D" parent="Action Wheel/Watch Container"]
position = Vector2(134.837, 112.564)
scale = Vector2(0.624431, 0.6307)
texture = ExtResource("3_adbjm")

[node name="Traverse" type="Area2D" parent="Action Wheel"]
script = ExtResource("13_paq7k")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Action Wheel/Traverse"]
polygon = PackedVector2Array(1105, 392, 1053, 439, 1002, 425, 1001, 360, 1061, 364)

[node name="Talk" type="Area2D" parent="Action Wheel"]
script = ExtResource("14_8xvhn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Action Wheel/Talk"]
polygon = PackedVector2Array(992, 361, 995, 420, 951, 450, 901, 397, 942, 371)

[node name="Use" type="Area2D" parent="Action Wheel"]
script = ExtResource("15_717pr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Action Wheel/Use"]
polygon = PackedVector2Array(896, 411, 944, 454, 950, 468, 936, 508, 864, 508, 867, 454)

[node name="Take" type="Area2D" parent="Action Wheel"]
script = ExtResource("16_utkvd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Action Wheel/Take"]
polygon = PackedVector2Array(932, 515, 866, 516, 874, 575, 902, 606, 954, 554)

[node name="Examine" type="Area2D" parent="Action Wheel"]
script = ExtResource("17_a4vhy")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Action Wheel/Examine"]
polygon = PackedVector2Array(957, 561, 912, 613, 931, 629, 998, 646, 1016, 639, 1009, 578)

[connection signal="input_event" from="Inventory/InventoryContainer" to="Inventory/InventoryContainer" method="_on_container_clicked"]
[connection signal="input_event" from="Inventory/InventoryContainer2" to="Inventory/InventoryContainer2" method="_on_container_clicked"]
[connection signal="input_event" from="Inventory/InventoryContainer3" to="Inventory/InventoryContainer3" method="_on_container_clicked"]
[connection signal="input_event" from="Action Wheel/Traverse" to="Action Wheel/Traverse" method="_on_traverse_clicked"]
[connection signal="input_event" from="Action Wheel/Talk" to="Action Wheel/Talk" method="_on_talk_clicked"]
[connection signal="input_event" from="Action Wheel/Use" to="Action Wheel/Use" method="_on_use_clicked"]
[connection signal="input_event" from="Action Wheel/Take" to="Action Wheel/Take" method="_on_take_clicked"]
[connection signal="input_event" from="Action Wheel/Examine" to="Action Wheel/Examine" method="_on_examine_clicked"]
